--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bruce-clock",
-  "version": "1.2.2",
-  "description": "",
-  "main": "main.js",
+  "version": "1.3.0",
+  "description": "Bruce Clock",
+  "main": "src/main.js",
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,13 +12,13 @@
   "author": "",
   "license": "ISC",
   "build": {
-    "appId": "bruceStudio.public.bruceClock.v1.2",
+    "appId": "bruceStudio.public.bruceClock",
     "win": {
       "target": "portable",
-      "icon": "assets/app-icon.png",
+      "icon": "src/assets/app-icon.png",
       "extraResources": [
         {
-          "from": "assets/",
+          "from": "src/assets/",
           "to": "assets/"
         }
       ]
